--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* * {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -131,7 +131,33 @@ nav .menu{
 nav .menu a{
     width: 25%;
     text-decoration: none;
-    color: white;
+    color: crimson;
     font-weight: bold;
     cursor: pointer;
-} */
+}
+@media only screen and (max-width: 600px) {
+    body {
+      background-color: lightblue;
+      text-align: center;
+      margin: auto;
+      padding: auto;
+    }
+    nav .menu{
+        width: 40%;
+        display: block;  
+        justify-content: space-evenly;
+    }
+    .div1 {
+       margin: auto;
+    }
+    .div2 {
+        margin: auto;
+     }
+  }
+  @media only screen and (min-width: 600px) {
+    body {
+      background-color: pink;
+      
+    }
+   
+  }
