--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     border: none;
     outline: none;
     cursor: pointer;
+    margin-left: 20px;
 }
 
 .first {
@@ -28,6 +29,7 @@
     color: crimson;
     background-color: black;
     transition: width 2s;
+    margin-left: 20px;
 }
 
 .div1:hover {
@@ -39,6 +41,7 @@
     height: 200px;
     border-radius: 100px;
     background-color: black;
+    margin-left: 20px;
 }
 
 .div3 {
